--- a/GithubBlocks/style.css
+++ b/GithubBlocks/style.css
@@ -16,7 +16,6 @@ a{
 h1{
     color: #588157;
     text-align: center;
-    text-decoration:solid;
     padding-bottom: 10px;
 }
 
@@ -26,12 +25,10 @@ img{
 }
 
 .background{
-    height: auto;
     width: 700px;
     background-color: #d4a373;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     margin: auto;
-    display: block;
 
 }
 
